--- a/css/cuestionarioDesktop.css
+++ b/css/cuestionarioDesktop.css
@@ -1,4 +1,3 @@
-/*972*/
 @font-face {
     font-family: 'Cybernetyka';
     src: url('../fonts/Cybernetyka.eot');
@@ -30,17 +29,25 @@ body {
     position: relative; 
 }
 
-#logo{
-    position: relative;
+header{
     text-align: center;
-    top: 5%;
+}
+
+#logo{
+    padding: 10px;
+}
+
+#titulo{
+    color: #FBFCFC;
+    letter-spacing: 10px;
+    font-family: Cybernetyka;
 }
 
 #menu{
     /*margin-left: 60px;*/
     position: relative;
     text-align: center;
-    top: 10%;
+    top: 1%;
 }
 
 #menu a{
@@ -80,30 +87,12 @@ body {
     transform: translateX(0px);
 }
 
-#titulo{
-    color: #FBFCFC;
-    font-family: Cybernetyka;
-    font-size: 70px;
-    letter-spacing: 15px;
-    padding-bottom: 40px;
-    padding-top: 50px;
-    position: relative;
-    text-align: center;
-    top: 10%;
+#fondo{
+    background-color: #555555;
+    height: 100%;
+    opacity: 0.9;
+    position: fixed;
+    width: 100%;
+    z-index: -1;
 }
 
-#containerBtn{
-    bottom: 10%;
-    position: relative;
-    text-align: center;
-    top: 10%;
-}
-
-#containerBtn a{
-    opacity: 0.8;
-}
-
-#containerBtn a:hover{
-    opacity: 1;
-    transition: 0.3s;
-}
