--- a/css/cuestionarioDesktop.css
+++ b/css/cuestionarioDesktop.css
@@ -26,7 +26,10 @@ body {
     background: url(../img/fondo.jpg) no-repeat 100% 0 fixed;
     background-position: 50% 50%;
     background-size: cover;
-    position: relative; 
+    position: relative;
+    width: 80%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 header{
@@ -34,7 +37,7 @@ header{
 }
 
 #logo{
-    padding: 10px;
+    margin-top: 10px;
 }
 
 #titulo{
@@ -45,7 +48,7 @@ header{
 
 #menu{
     /*margin-left: 60px;*/
-    position: relative;
+    /*position: relative;*/
     text-align: center;
     top: 1%;
 }
@@ -87,12 +90,25 @@ header{
     transform: translateX(0px);
 }
 
-#fondo{
-    background-color: #555555;
-    height: 100%;
-    opacity: 0.9;
-    position: fixed;
-    width: 100%;
-    z-index: -1;
+#containerForm{
+    padding: 24px 0;
 }
 
+#fondoForm{
+    background-color: #2E2C29;
+    position:absolute;
+    z-index:-1;
+    top:0;
+    left:0;
+    right: 0;
+    bottom:0;
+    opacity:0.2;
+}
+
+#formulario{
+    padding: 3%;
+}
+
+h4{
+    font-size: 20px;
+}
