--- a/css/cuestionarioDesktop.css
+++ b/css/cuestionarioDesktop.css
@@ -17,7 +17,7 @@
 }
 
 body,html{
-    height: 100%;
+    /*height: 1300px;*/
     padding: 0px;
     margin: 0px;
 }
@@ -30,6 +30,7 @@ body {
     width: 80%;
     padding-left: 10%;
     padding-right: 10%;
+    height: 1245px;
 }
 
 header{
@@ -96,19 +97,33 @@ header{
 
 #fondoForm{
     background-color: #2E2C29;
-    position:absolute;
-    z-index:-1;
-    top:0;
-    left:0;
-    right: 0;
-    bottom:0;
-    opacity:0.2;
+    position: absolute;
+    height: 104%;
+    width: 80%;
+    z-index: -1;
+    opacity: 0.8;
 }
 
 #formulario{
-    padding: 3%;
+    padding: 0% 3% 0% 3%;
 }
 
 h4{
+    color: #FBFCFC;
     font-size: 20px;
+}
+
+#containerBtn{
+    bottom: 10%;
+    position: relative;
+    text-align: center;
+}
+
+#containerBtn a{
+    opacity: 0.8;
+}
+
+#containerBtn a:hover{
+    opacity: 1;
+    transition: 0.3s;
 }
