--- a/css/portadaDesktop.css
+++ b/css/portadaDesktop.css
@@ -27,13 +27,17 @@ body {
     background: url(../img/fondo.jpg) no-repeat 100% 0 fixed;
     background-position: 50% 50%;
     background-size: cover;
-    position: relative; 
+    position: relative;
+    width: 80%;
+    padding-left: 10%;
+    padding-right: 10%;
+    height: 100%;
 }
 
 #logo{
     position: relative;
     text-align: center;
-    top: 5%;
+    top: 2%;
 }
 
 #menu{
@@ -85,18 +89,15 @@ body {
     font-family: Cybernetyka;
     font-size: 70px;
     letter-spacing: 15px;
-    padding-bottom: 40px;
-    padding-top: 50px;
     position: relative;
     text-align: center;
     top: 10%;
 }
 
 #containerBtn{
-    bottom: 10%;
+    top: 10%;
     position: relative;
     text-align: center;
-    top: 10%;
 }
 
 #containerBtn a{
