--- a/css/Desktop.css
+++ b/css/Desktop.css
@@ -18,8 +18,6 @@
 }
 
 body,html{
-    height: 100%;
-    padding: 0px;
     margin: 0px;
 }
 
@@ -27,76 +25,97 @@ body {
     background: url(../img/fondo.jpg) no-repeat 100% 0 fixed;
     background-position: 50% 50%;
     background-size: cover;
-    position: relative;
-    width: 80%;
-    padding-left: 10%;
-    padding-right: 10%;
-    height: 100%;
 }
 
 #logo{
-    position: relative;
     text-align: center;
-    top: 2%;
 }
 
-#menu{
-    /*margin-left: 60px;*/
-    position: relative;
+.menu{
+    margin-top: 10vh;
+    margin-bottom: 5vh;
     text-align: center;
-    top: 10%;
 }
 
-#menu a{
+.menu a{
     color: #E4C049;
     cursor: pointer;
     font-family: Cybernetyka;
-    font-size: 17px;
+    font-size: 1.6vmin;
     letter-spacing: 5px;
-    margin: 0px 60px;
-    position: relative;
+    margin: 0px 10px;
     padding: 8px 8px;
     text-decoration: none;
 }
 
-#menu a:before, #menu a:after{
-    font-size: 30px;
+.menu a:before, .menu a:after{
+    font-size: 2.3vmin;
     opacity: 0;
-    position: absolute;
     top: 0px;
-    transition: 0.3s;
-}
-
-#menu a:before{
+    transition: 0.8s;
     content: '···';
-    left: -40px;
-    transform: translateX(10px);
 }
 
-#menu a:after{
-    content: '···';
-    right: -40px;
-    transform: translateX(-10px);
-}
-
-#menu a:hover:before, #menu a:hover:after{
+.menu a:hover:before, .menu a:hover:after{
     opacity: 1;
     transform: translateX(0px);
+}
+
+#menuMovil{
+    display: none;
+}
+
+@media screen and (max-width: 900px){
+
+    #logo{
+        padding-top: 10%;
+    }
+
+    .menu{
+        position: fixed;
+        margin-top: 0%;
+        margin-bottom: 0%;
+        background-color: #333;
+        width: 100%
+    }
+
+    .menu a{
+        font-size: 15px;
+        display: block;
+        margin: 0px;
+    }
+
+    .menu a:before, .menu a:after{
+        display: none;
+    }
+
+    .menu a#info, .menu a#ubicacion, .menu a#about{
+        display: none;
+    } 
+
+    .menu a#menuMovil{
+        display: block;
+        position: absolute;
+    }
+
+    #menuMovil{  
+        /*width:30px;*/
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none; 
+    }
 }
 
 #titulo{
     color: #FBFCFC;
     font-family: Cybernetyka;
-    font-size: 70px;
-    letter-spacing: 15px;
-    position: relative;
-    text-align: center;
-    top: 10%;
+    font-size: 10vmin;
+    letter-spacing: 0.15em;
+    margin-top: 10px;
 }
 
 #containerBtn{
-    top: 10%;
-    position: relative;
     text-align: center;
 }
 
