--- a/css/movil.css
+++ b/css/movil.css
@@ -46,12 +46,12 @@ body {
     font-family: Cybernetyka;
     font-size: 15px;
     letter-spacing: 5px;
-    //margin: 0px 10px;
+    /*margin: 0px 10px;*/
     padding: 8px 8px;
     text-decoration: none;
 
-    //font-size: 15px;
-    //display: block;
+    /*font-size: 15px;*/
+    /*display: block;*/
     margin: 0px;    
 }
 
