--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,22 +1,19 @@
 @font-face {
     font-family: 'Cybernetyka';
     src: url('../fonts/Cybernetyka.eot');
-    src: url('../fonts/Cybernetyka.woff2') format('woff2'),
-        url('../fonts/Cybernetyka.eot?#iefix') format('embedded-opentype');
+    src: url('../fonts/Cybernetyka.woff2') format('woff2'), url('../fonts/Cybernetyka.eot?#iefix') format('embedded-opentype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'CybernetykaNormal';
-    src: url('../fonts/CybernetykaNormal.woff') format('woff'),
-        url('../fonts/CybernetykaNormal.ttf') format('truetype'),
-        url('../fonts/CybernetykaNormal.svg#CybernetykaNormal') format('svg');
+    src: url('../fonts/CybernetykaNormal.woff') format('woff'), url('../fonts/CybernetykaNormal.ttf') format('truetype'), url('../fonts/CybernetykaNormal.svg#CybernetykaNormal') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
-body,html{
+body, html {
     margin: 0px;
 }
 
@@ -26,17 +23,17 @@ body {
     background-size: cover;
 }
 
-#logo{
+#logo {
     text-align: center;
 }
 
-.menu{
+.menu {
     margin-top: 10vh;
     margin-bottom: 5vh;
     text-align: center;
 }
 
-.menu a{
+.menu a {
     color: #E4C049;
     cursor: pointer;
     font-family: Cybernetyka;
@@ -48,11 +45,11 @@ body {
     display: inline-block
 }
 
-#inicio,#info,#ubicacion,#about{
+#inicio, #info, #ubicacion, #about {
     display: inline-block;
 }
 
-.menu a:before, .menu a:after{
+.menu a:before, .menu a:after {
     font-size: 2.3vmin;
     opacity: 0;
     top: 0px;
@@ -60,16 +57,16 @@ body {
     content: '···';
 }
 
-.menu a:hover:before, .menu a:hover:after{
+.menu a:hover:before, .menu a:hover:after {
     opacity: 1;
     transform: translateX(0px);
 }
 
-#menuMovil{
+#menuMovil {
     display: none;
 }
 
-#titulo{
+#titulo {
     color: #FBFCFC;
     font-family: Cybernetyka;
     font-size: 10vmin;
@@ -77,28 +74,27 @@ body {
     margin-top: 10px;
 }
 
-#containerInfo,#containerUbicacion,#containerAbout{
+#containerInfo, #containerUbicacion, #containerAbout {
     display: none;
     margin: 0 15%;
 }
 
-h2{
+h2 {
     color: #FBFCFC;
     font-family: Cybernetyka;
     margin: 0 2%;
     letter-spacing: 0.15em;
 }
 
-#containerBtn{
+#containerBtn {
     text-align: center;
 }
 
-#containerBtn a{
+#containerBtn a {
     opacity: 0.8;
 }
 
-#containerBtn a:hover{
+#containerBtn a:hover {
     opacity: 1;
     transition: 0.3s;
 }
-
