--- a/css/cuestionario.css
+++ b/css/cuestionario.css
@@ -86,7 +86,78 @@ span {
     transition: 0.3s;
 }
 
+/*the container must be positioned relative:*/
+
+select {
+    position: relative;
+    font-family: Arial;
+}
+
+.select {
+    display: none;
+    /*hide original SELECT element:*/
+}
+
+.select-selected {
+    background-color: DodgerBlue;
+}
+
+/*style the arrow inside the select element:*/
+
+.select-selected:after {
+    position: absolute;
+    content: "";
+    top: 14px;
+    right: 10px;
+    width: 0;
+    height: 0;
+    border: 6px solid transparent;
+    border-color: #fff transparent transparent transparent;
+}
+
+/*point the arrow upwards when the select box is open (active):*/
+
+.select-selected.select-arrow-active:after {
+    border-color: transparent transparent #fff transparent;
+    top: 7px;
+}
+
+/*style the items (options), including the selected item:*/
+
+.select-items div, .select-selected {
+    color: #ffffff;
+    padding: 8px 16px;
+    border: 1px solid transparent;
+    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
+    cursor: pointer;
+    user-select: none;
+}
+
+/*style items (options):*/
+
+.select-items {
+    position: absolute;
+    background-color: DodgerBlue;
+    top: 100%;
+    left: 0;
+    right: 0;
+    z-index: 99;
+}
+
+/*hide the items when the select box is closed:*/
+
+.select-hide {
+    display: none;
+}
+
+.select-items div:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+/*--------------------------------------------------------------*/
+
 /* The container */
+
 .container {
     display: block;
     position: relative;
@@ -103,6 +174,7 @@ span {
 }
 
 /* Hide the browser's default checkbox */
+
 .container input {
     position: absolute;
     opacity: 0;
@@ -110,6 +182,7 @@ span {
 }
 
 /* Create a custom checkbox */
+
 .checkmark {
     position: absolute;
     top: 0;
@@ -120,16 +193,19 @@ span {
 }
 
 /* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
+
+.container:hover input~.checkmark {
     background-color: #FBFCFC;
 }
 
 /* When the checkbox is checked, add a blue background */
-.container input:checked ~ .checkmark {
+
+.container input:checked~.checkmark {
     background-color: #E4C049;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
+
 .checkmark:after {
     content: "";
     position: absolute;
@@ -137,11 +213,13 @@ span {
 }
 
 /* Show the checkmark when checked */
-.container input:checked ~ .checkmark:after {
+
+.container input:checked~.checkmark:after {
     display: block;
 }
 
 /* Style the checkmark/indicator */
+
 .container .checkmark:after {
     left: 9px;
     top: 5px;
@@ -153,8 +231,11 @@ span {
     -ms-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+
 /*---------------------------------------------------------*/
+
 /* The container */
+
 .containerRadio {
     display: block;
     position: relative;
@@ -171,6 +252,7 @@ span {
 }
 
 /* Hide the browser's default radio button */
+
 .containerRadio input {
     position: absolute;
     opacity: 0;
@@ -178,6 +260,7 @@ span {
 }
 
 /* Create a custom radio button */
+
 .checkmarkRadio {
     position: absolute;
     top: 0;
@@ -189,16 +272,19 @@ span {
 }
 
 /* On mouse-over, add a grey background color */
-.containerRadio:hover input ~ .checkmarkRadio {
+
+.containerRadio:hover input~.checkmarkRadio {
     background-color: #FBFCFC;
 }
 
 /* When the radio button is checked, add a blue background */
-.containerRadio input:checked ~ .checkmarkRadio {
+
+.containerRadio input:checked~.checkmarkRadio {
     background-color: #E4C049;
 }
 
 /* Create the indicator (the dot/circle - hidden when not checked) */
+
 .checkmarkRadio:after {
     content: "";
     position: absolute;
@@ -206,16 +292,18 @@ span {
 }
 
 /* Show the indicator (dot/circle) when checked */
-.containerRadio input:checked ~ .checkmarkRadio:after {
+
+.containerRadio input:checked~.checkmarkRadio:after {
     display: block;
 }
 
 /* Style the indicator (dot/circle) */
+
 .containerRadio .checkmarkRadio:after {
- 	top: 9px;
-	left: 9px;
-	width: 8px;
-	height: 8px;
-	border-radius: 50%;
-	background: white;
+    top: 9px;
+    left: 9px;
+    width: 8px;
+    height: 8px;
+    border-radius: 50%;
+    background: white;
 }
