--- a/css/cuestionario.css
+++ b/css/cuestionario.css
@@ -61,7 +61,7 @@ h3 {
 
 h4 {
     color: #E4C049;
-    font-size: 20px;
+    font-size: 2vw;
     letter-spacing: 1px;
 }
 
@@ -86,72 +86,27 @@ span {
     transition: 0.3s;
 }
 
-/*the container must be positioned relative:*/
+/*.styled-select {
+    background: url(../img/select.png) no-repeat 96% 0;
+    height: 29px;
+    overflow: hidden;
+    width: 240px;
+    background-color: rgba(56, 56, 56, 0.8);
+}*/
 
-select {
-    position: relative;
-    font-family: Arial;
+.styled-select select {
+    /*background: transparent;*/
+    background-color: rgba(56, 56, 56, 0.8);
+    border: none;
+    color: #FBFCFC;
+    font-size: 2vw;
+    height: 35px;
+    padding: 5px;
+    width: 268px;
 }
 
-.select {
-    display: none;
-    /*hide original SELECT element:*/
-}
-
-.select-selected {
-    background-color: DodgerBlue;
-}
-
-/*style the arrow inside the select element:*/
-
-.select-selected:after {
-    position: absolute;
-    content: "";
-    top: 14px;
-    right: 10px;
-    width: 0;
-    height: 0;
-    border: 6px solid transparent;
-    border-color: #fff transparent transparent transparent;
-}
-
-/*point the arrow upwards when the select box is open (active):*/
-
-.select-selected.select-arrow-active:after {
-    border-color: transparent transparent #fff transparent;
-    top: 7px;
-}
-
-/*style the items (options), including the selected item:*/
-
-.select-items div, .select-selected {
-    color: #ffffff;
-    padding: 8px 16px;
-    border: 1px solid transparent;
-    border-color: transparent transparent rgba(0, 0, 0, 0.1) transparent;
-    cursor: pointer;
-    user-select: none;
-}
-
-/*style items (options):*/
-
-.select-items {
-    position: absolute;
-    background-color: DodgerBlue;
-    top: 100%;
-    left: 0;
-    right: 0;
-    z-index: 99;
-}
-
-/*hide the items when the select box is closed:*/
-
-.select-hide {
-    display: none;
-}
-
-.select-items div:hover {
-    background-color: rgba(0, 0, 0, 0.1);
+select: option:checked{
+    background-color: #E4C049;
 }
 
 /*--------------------------------------------------------------*/
