--- a/css/cuestionario.css
+++ b/css/cuestionario.css
@@ -55,13 +55,13 @@ h3 {
     color: #E4C049;
     text-align: center;
     letter-spacing: 5px;
-    font-size: 25px;
+    font-size: 30px;
     font-family: Cybernetyka;
 }
 
 h4 {
     color: #E4C049;
-    font-size: 2vw;
+    font-size: 25px;
     letter-spacing: 1px;
 }
 
@@ -86,6 +86,16 @@ span {
     transition: 0.3s;
 }
 
+.styled-text input[type=text]{
+    background-color: rgba(56, 56, 56, 0.8);
+    border: none;
+    color: #FBFCFC;
+    font-size: 20px;
+    height: 30px;
+    padding: 5px;
+    width: 390px;
+}
+
 /*.styled-select {
     background: url(../img/select.png) no-repeat 96% 0;
     height: 29px;
@@ -99,10 +109,21 @@ span {
     background-color: rgba(56, 56, 56, 0.8);
     border: none;
     color: #FBFCFC;
-    font-size: 2vw;
-    height: 4vw;
+    font-size: 20px;
+    height: 40px;
     padding: 5px;
-    width: 25vw;
+    width: 390px;
+}
+
+.styled-selectMult select {
+    /*background: transparent;*/
+    background-color: rgba(56, 56, 56, 0.8);
+    border: none;
+    color: #FBFCFC;
+    font-size: 20px;
+    height: 110px;
+    padding: 5px;
+    width: 390px;
 }
 
 /*select: option:checked{
